# dlt-mcp-server

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/: dependabot.yml
docs/: index.md
src/: basic_index.cpp  basic_index.h  bloom_filter.h  config.h  dashboard.cpp  dashboard.h  dlt-mcp-server.cpp  dlt-mcp-server.h  dlt_mcp_server.cpp  dlt_mcp_server.h  index.h  ngram_index.cpp  ngram_index.h  report-storage.cpp  report-storage.h  report_cache.cpp  report_cache.h  report_storage.cpp  report_storage.h  settings-dialog.cpp  settings-dialog.h  statistics.h
src/ui/: dashboard.cpp  dashboard.h  report-browser.cpp  report-browser.h  report-header.cpp  report-header.h  report-table-model.cpp  report-table-model.h  report_browser.cpp  report_browser.h  report_header.cpp  report_table_model.cpp  report_table_model.h  settings-dialog.cpp  settings-dialog.h  settings_dialog.cpp
src/utility/: dlt_id.h  formatters.h  message.h  string.h  time.h
test/: test_bloom_filter.cpp
